# product

./: design.md  requirements.md  tasks.md
backend/: README.md  pyproject.toml
backend/src/sip/: __init__.py
backend/src/sip/api/: __init__.py  app.py
backend/src/sip/config/: __init__.py  settings.py
backend/src/sip/db/: __init__.py  elasticsearch_client.py  influxdb_client.py  neo4j_client.py  postgres.py  redis_cache.py  s3_client.py
backend/src/sip/engines/: __init__.py  correlation.py  ingestion.py  query_engine.py  schema_mapper.py  threat_detection.py
backend/src/sip/models/: __init__.py  alerts.py  cases.py  entities.py  events.py
backend/src/sip/services/: __init__.py  access_control.py  alert_manager.py  asset_management.py  audit.py  behavioral_analytics.py  compliance.py  config_management.py  data_retention.py  enrichment.py  export_service.py  ha_dr.py  identity_analytics.py  investigation.py  network_analysis.py  performance_monitoring.py  playbook_executor.py  security_monitoring.py  threat_intelligence.py
backend/src/sip/utils/: logging.py
backend/tests/: __init__.py
backend/tests/unit/: test_engines.py  test_models.py  test_services.py
deploy/docker/: docker-compose.yml
deploy/kubernetes/: deployment.yaml
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Investigations.tsx  Settings.tsx  ThreatHunting.tsx
frontend/src/styles/: globals.css
