[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-intelligence-platform"
version = "1.0.0"
description = "Enterprise-grade Security Intelligence Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "elasticsearch>=8.11.0",
    "neo4j>=5.15.0",
    "influxdb-client>=1.38.0",
    "boto3>=1.34.0",
    "kafka-python>=2.0.2",
    "celery>=5.3.0",
    "httpx>=0.25.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.7",
    "python-dateutil>=2.8.2",
    "ipaddress>=1.0.23",
    "tldextract>=5.1.0",
    "geoip2>=4.8.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "websockets>=12.0",
    "jinja2>=3.1.2",
    "weasyprint>=60.0",
    "openpyxl>=3.1.2",
    "strawberry-graphql>=0.215.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.91.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "respx>=0.20.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
